# ts

./: .gitignore  README.md  addition.md  comments.md  proposal_residuals.md  pyproject.toml
configs/: mimic_class_descriptions.json  mimic_cxr_protocol_v1.json  mimic_split_seed_2026.json
docs/: mimic_cxr_protocol.md
experiments/: README.md  __init__.py  common.py  control_decision.py  control_episodes.py  controls.py  episodes.py  lp_text.py  metrics.py  proker.py  protonet_text.py  run.py  run_controls.py  tcla.py  text_only_zero_shot.py  tip_adapter_f.py  visual_protonet.py
experiments/iera/: README.md  __init__.py  episodes.py  labels.py  model.py  patch_cache.py  run.py
experiments/residuals/: README.md  __init__.py  build_cache.py  data.py  episodes.py  metrics.py  model.py  run.py
results/: decision.json  episodes_00.pt  episodes_01.pt  episodes_02.pt  episodes_03.pt  experiment.json  iera_model.pt  per_seed_metrics.csv  summary_metrics.csv  training_curves.csv
results/pair_fsl_v1/: experiment.json  overall_metrics.csv  per_class_metrics.csv  per_class_per_seed.csv  per_seed_metrics.csv
results/pilot_v2/: decision.json  eligibility.json  episodes_00_seed_000.pt  episodes_00_seed_001.pt  episodes_00_seed_002.pt  episodes_00_seed_003.pt  episodes_00_seed_004.pt  episodes_01_seed_000.pt  episodes_01_seed_001.pt  episodes_01_seed_002.pt  experiment.json  (+24 more)
test/: protonet.py
tests/: test_control_decision.py  test_control_episodes.py  test_embed_pairs.py  test_iera.py  test_iera_labels.py  test_mimic_cxr_protocol.py  test_pipeline.py  test_residuals.py
(+9 files in other folders)
