[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic-cxr-fsl-protocol"
version = "1.0.0"
description = "Reproducible patient-disjoint few-shot episodes for MIMIC-CXR"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
embedding = [
  "torch>=2.1",
  "Pillow>=10",
  "open-clip-torch==2.23.0",
  "transformers==4.35.2",
]

[project.scripts]
mimic-build-protocol = "mimic_cxr_protocol.protocol:build_main"
mimic-validate-protocol = "mimic_cxr_protocol.protocol:validate_main"
mimic-embed-pairs = "mimic_cxr_protocol.embed_pairs:main"

[tool.setuptools.packages.find]
where = ["src"]
